tests/NormalTests/paczka1/fuzzy1/90359956.err
Error in line 12: hLKTkt8YhoJ A493 5,3
Error in line 7: APTnkd S86 60,2
Error in line 28: MpE A221 36,3
Error in line 32: MpE A238 48,3
Error in line 36: APTnkd A221 156,y
Error in line 33: MpE A493 61,5
